k8s/videodownloader-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: videodownloader-deployment
  namespace: videodownloader
spec:
  selector:
    matchLabels:
      app: videodownloader
  replicas: 1
  template:
    metadata:
      labels:
        app: videodownloader
    spec:
      volumes:
      - name: videodownloader-data
        persistentVolumeClaim:
          claimName: videodownloader-pvc
      containers:
      - name: videodownloader
#        image: williswschan/videodownloader:latest
        image: registry.mymsngroup.com/videodownloader:latest
#        imagePullPolicy: IfNotPresent
        imagePullPolicy: Always
        ports:
        - containerPort: 5000 
          protocol: TCP
        volumeMounts:
          - name: videodownloader-data
            mountPath: /app/downloads
            subPath: downloads
