k8s/videodownloader-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: videodownloader-service
  namespace: videodownloader
spec:
  selector:
    app: videodownloader
  ports:
    - name: "5000"
      port: 5000
      protocol: TCP
      targetPort: 5000
