k8s/videodownloader-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: videodownloader-ingress
  namespace: videodownloader
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/server-snippets: |
     location / {
      proxy_set_header Upgrade $http_upgrade;
      proxy_http_version 1.1;
      proxy_set_header Connection "upgrade";
      proxy_cache_bypass $http_upgrade;
      }
spec:
  ingressClassName: nginx
  rules:
    - host: download.mymsngroup.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: videodownloader-service
                port:
                  number: 5000
